--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="box">
-        <img src="./taras.jpg" alt="" class="myimg">
-
+      <img src="./taras.jpg" alt="" class="myimg" />
+      <div class="btn">
+        <div>Albert Einstien</div>
+        <div>CTO</div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
