added two more boxes

--- a/index.html
+++ b/index.html
@@ -14,5 +14,19 @@
         <div>CTO</div>
       </div>
     </div>
+    <div class="box">
+        <img src="./taras.jpg" alt="" class="myimg" />
+        <div class="btn">
+          <div>Albert Einstien</div>
+          <div>CTO</div>
+        </div>
+      </div>
+      <div class="box">
+        <img src="./taras.jpg" alt="" class="myimg" />
+        <div class="btn">
+          <div>Albert Einstien</div>
+          <div>CTO</div>
+        </div>
+      </div>
   </body>
 </html>
