--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="box">
-      <img src="./taras.jpg" alt="" class="myimg" />
-      <div class="btn">
-        <div>Albert Einstien</div>
-        <div>CTO</div>
-      </div>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="Box">
+        <img src="taras.jpg" alt="taras">
+        <div class="sBox">
+            <div class="AE">Albert Enstine</div>
+            <div>CTO</div>
+        </div>     
     </div>
-    <div class="box">
-        <img src="./taras.jpg" alt="" class="myimg" />
-        <div class="btn">
-          <div>Albert Einstien</div>
-          <div>CTO</div>
-        </div>
-      </div>
-      <div class="box">
-        <img src="./taras.jpg" alt="" class="myimg" />
-        <div class="btn">
-          <div>Albert Einstien</div>
-          <div>CTO</div>
-        </div>
-      </div>
-  </body>
+    <div class="Box">
+        <img src="taras.jpg" alt="taras">
+        <div class="sBox">
+            <div class="AE">Albert Enstine</div>
+            <div>CTO</div>
+        </div>     
+    </div>
+    <div class="Box">
+        <img src="taras.jpg" alt="taras">
+        <div class="sBox">
+            <div class="AE">Albert Enstine</div>
+            <div>CTO</div>
+        </div>     
+    </div>
+    <div class="Box">
+        <img src="taras.jpg" alt="taras">
+        <div class="sBox">
+            <div class="AE">Albert Enstine</div>
+            <div>CTO</div>
+        </div>     
+    </div>
+</body>
+
 </html>
